--- a/README.html
+++ b/README.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 </head>
 <body>
-<h1 id="basic5starratingsystemwithform">Basic 5 Star Rating System with Form</h1>
+<h1 id="basic5starratingsystemwithphpform">Basic 5 Star Rating System with PHP Form</h1>
 
 </body>
 </html>
